--- a/index.html
+++ b/index.html
@@ -108,16 +108,15 @@
 
   
     <footer>
-      Se utilizaron herramientas utiles como 
-      <br>
-    <a href="https://www.soyhenry.com/">SoyHenry Pagina oficial</a>
-    <br>
-    <a href="https://github.com/">Github</a>
-    <br>
-   <a href="https://code.visualstudio.com/">Visual Studio Code</a>
-   <br>
-   <a href="https://slack.com/intl/es-la">Slack</a>
-   <br>
+      Se utilizaron paginas utiles como 
+
+      <select>
+    <option><a href="https://www.soyhenry.com/">SoyHenry</a></option>
+    <option><a href="https://github.com/">Github</a></option>
+    <option><a href="https://code.visualstudio.com/">Visual Studio Code</a></option>
+    <option><a href="https://slack.com/intl/es-la">Slack</a></option>
+  </select>
+
   </footer>
   </body>
 </html>
