Working with HTML, Module 3 of Soy Henry

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
   
     <footer>
-      Se utilizaron paginas utiles como 
+      Se utilizaron paginas utiles como:
 
       <select>
     <option><a href="https://www.soyhenry.com/">SoyHenry</a></option>
