--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mi primer sitio web</title>
   </head>
+  <link rel="stylesheet" href="styles.css">
   <body>
     <header>
       <h1>Bootcamps SoyHenry</h1>
@@ -15,7 +16,7 @@
     </header>
 
     <main>
-
+<hr>
       <section>
         <h2>Introduccion y herramientas</h2>
         <h3>Modulo 1</h3>
@@ -77,7 +78,7 @@
 
       <hr>
 <article>
-  <h3>Es importante destacar que cada módulo incluía tutoriales y tareas prácticas diseñadas para aplicar lo aprendido</h3>
+  <h3 id="alerta">Es importante destacar que cada módulo incluía tutoriales y tareas prácticas diseñadas para aplicar lo aprendido</h3>
 </article>
       
 
@@ -85,18 +86,17 @@
     <hr />
 
   <section>
-    <h2></h2>
     <table>Proximos modulos:
-      <th>Modulo 4
-        <td>Css</td>
+      <th>Modulo 4:
+        <td>Css--</td>
       </th>
-      <th>Modulo 5
-        <td>JavaScript</td>
+      <th>Modulo 5:
+        <td>JavaScript--</td>
       </th>
-      <th>Modulo 6
-        <td>Bucles</td>
+      <th>Modulo 6:
+        <td>Bucles--</td>
       </th>
-      <th>Modulo 7
+      <th>Modulo 7:
         <td>Arrays</td>
       </th>
     </table>
