homework css y html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </header>
 
     <main>
+     
 <hr>
       <section>
         <h2>Introduccion y herramientas</h2>
@@ -106,8 +107,10 @@
   </main>
   </section>
 
-  
+ 
     <footer>
+      <a href="contacto.html">Formulario de contacto</a>
+      <hr>
       Se utilizaron paginas utiles como:
 
       <select>
