working css class 4

--- a/index.html
+++ b/index.html
@@ -111,14 +111,17 @@
     <footer>
       <a href="contacto.html">Formulario de contacto</a>
       <hr>
-      Se utilizaron paginas utiles como:
+      <p>Paginas recomendadas:</p>
+      <a href="https://www.soyhenry.com/">SoyHenry</a>
+      <br>
+      <a href="https://github.com/">Github</a>
+      <br>
+      <a href="https://code.visualstudio.com/">Visual Studio Code</a>
+      <br>
+      <a href="https://slack.com/intl/es-la">Slack</a>
+      <hr>
+     
 
-      <select>
-    <option><a href="https://www.soyhenry.com/">SoyHenry</a></option>
-    <option><a href="https://github.com/">Github</a></option>
-    <option><a href="https://code.visualstudio.com/">Visual Studio Code</a></option>
-    <option><a href="https://slack.com/intl/es-la">Slack</a></option>
-  </select>
 
   </footer>
   </body>
